libdpkg: Print a longer string when an unknown field value is found
Use a capped string length instead of using last namevalue length
member when printing the disallowed value when parsing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-07-02  Guillem Jover  <guillem@debian.org>
 
+	* lib/fields.c (convert_string): Use a capped string length instead
+	of using last namevalue length member when printing the disallowed
+	value.
+
+2008-07-02  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c (limiteddescription): Use NULL instead of 0.
 	(list1package, searchfiles, enqperpackage, main): Likewise.
 	(cipaction, ignoredependss, cmdinfos): Likewise.
