--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Do not allocate memory when lstat fails during package upgrade.
   * Properly lstat the correct file when using --root on package upgrade.
     Thanks to Egmont Koblinger. Closes: #281057
+  * Print a longer string when a disallowed field value is found when parsing.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
