Updated Slovak translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
   * Romanian (Eddy Petrișor).
   * Russian (Yuri Kozlov). Closes: #488689
+  * Slovak (Ivan Masár). Closes: #488903
 
   [ Updated dselect translations ]
   * Romanian (Eddy Petrișor).
