--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-02  Ivan Masár  <helix84@centrum.sk>
+
+	* sk.po: Updated to 984t.
+
 2008-07-01  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 984t.
