--- a/po/sk.po
+++ b/po/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-05-03 20:54+0100\n"
+"PO-Revision-Date: 2008-07-02 01:39+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -2766,7 +2766,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "neplatné číslo pre --%s: „%.250s“"
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2807,10 +2807,10 @@ msgid ""
 msgstr ""
 "%s vynucovacie voľby - kontrolujú správanie v prípade, že sa objaví "
 "problém:\n"
-"  varuje, ale pokračuje:  --force-<predmet>,<predmet>,...\n"
-"  skončí s chybou:        --refuse-<predmet>,<predmet>,... | --no-force-"
+"  varovať ale pokračovať: --force-<predmet>,<predmet>,...\n"
+"  skončiť s chybou:       --refuse-<predmet>,<predmet>,... | --no-force-"
 "<predmet>,...\n"
-" Vynucovacie predmety:\n"
+" Vynucovanie:\n"
 "  all [!]                Nastaví všetky vynucovacie voľby\n"
 "  downgrade [*]          Nahradí balík nižšou verziou\n"
 "  configure-any          Nastaví ľubovolný balík, ktorý tomuto konkrétnemu "
@@ -2818,8 +2818,8 @@ msgstr ""
 "  hold                   Spracuje súvisiace balíky, aj keď sú pozdržané\n"
 "  bad-path               Premenná PATH neobsahuje dôležité programy, dajú sa "
 "očakávať problémy\n"
-"  not-root               Skúsi (od)inštalovať predmety aj bez rootovských "
-"privilégií\n"
+"  not-root               Skúsi (od)inštalovať predmety aj bez oprávnenia "
+"root\n"
 "  overwrite              Prepíše súbor z jedného balíka iným\n"
 "  overwrite-diverted     Prepíše odklonený balík neodklonenou verziou\n"
 "  bad-verify             Nainštaluje balík aj napriek zlyhaniu kontroly "
