More updates from Florent

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -8,13 +8,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-06-03 21:58+0200\n"
-"PO-Revision-Date: 2008-06-24 18:30+0200\n"
+"PO-Revision-Date: 2008-07-01 22:34+0200\n"
 "Last-Translator: Florent USSEIL <swiip81@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 # type: TH
 #: ../../man/822-date.1:2
@@ -614,7 +613,7 @@ msgstr ""
 msgid "B<deb-old>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 msgstr "B<deb-old>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 
-# type: Plain text
+# type: TH
 #: ../../man/deb-control.5:3
 #, no-wrap
 msgid "deb-control"
@@ -1182,7 +1181,7 @@ msgid ""
 msgstr ""
 "B<deb>(5), B<deb-version>(5), B<debtags>(1), B<dpkg>(1), B<dpkg-deb>(1)."
 
-# type: TP
+# type: TH
 #: ../../man/deb-version.5:5
 #, no-wrap
 msgid "deb-version"
@@ -1292,6 +1291,7 @@ msgstr ""
 
 # type: TP
 #: ../../man/deb-version.5:48
+#, no-wrap
 msgid "I<debian_revision>"
 msgstr "I<debian_revision>"
 
@@ -1474,7 +1474,7 @@ msgstr "Copyright (C) 1996,1997,1998 Ian Jackson et Christian Schwarz"
 msgid "Copyright (C) 2007 Frank Lichtenheld"
 msgstr "Copyright (C) 2007 Frank Lichtenheld"
 
-# type: Plain text
+# type: TH
 #: ../../man/deb-old.5:1
 #, no-wrap
 msgid "deb-old"
@@ -1573,7 +1573,7 @@ msgstr ""
 msgid "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 msgstr "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 
-# type: TP
+# type: TH
 #: ../../man/deb-override.5:16
 #, no-wrap
 msgid "deb-override"
@@ -1590,7 +1590,7 @@ msgstr "07-03-2007"
 msgid "deb-override - Debian archive override file"
 msgstr "deb-override - Fichier override d'une archive Debian"
 
-# type: TP
+# type: Plain text
 #: ../../man/deb-override.5:22
 msgid "override"
 msgstr "override"
@@ -1772,7 +1772,7 @@ msgstr ""
 msgid "B<dpkg-shlibdeps>(1), B<deb-symbols>(5)."
 msgstr "B<dpkg-shlibdeps>(1), B<deb-symbols>(5)."
 
-# type: TP
+# type: TH
 #: ../../man/deb-substvars.5:2
 #, no-wrap
 msgid "deb-substvars"
@@ -1783,7 +1783,7 @@ msgstr "deb-substvars"
 msgid "deb-substvars - Debian source substitution variables"
 msgstr "deb-substvars - Variables de substitution de source Debian"
 
-# type: TP
+# type: Plain text
 #: ../../man/deb-substvars.5:8
 msgid "substvars"
 msgstr "substvars"
@@ -2097,7 +2097,7 @@ msgstr "Copyright (C) 1995-1996 Ian Jackson"
 msgid "Copyright (C) 2000 Wichert Akkerman"
 msgstr "Copyright (C) 2000 Wichert Akkerman"
 
-# type: Plain text
+# type: TH
 #: ../../man/deb-symbols.5:2
 #, no-wrap
 msgid "deb-symbols"
@@ -2270,7 +2270,7 @@ msgstr "B<http://wiki.debian.org/Projects/ImprovedDpkgShlibdeps>"
 msgid "B<dpkg-shlibdeps>(1), B<dpkg-gensymbols>(1)."
 msgstr "B<dpkg-shlibdeps>(1), B<dpkg-gensymbols>(1)."
 
-# type: TP
+# type: TH
 #: ../../man/deb-triggers.5:1
 #, no-wrap
 msgid "deb-triggers"
@@ -2319,7 +2319,7 @@ msgstr ""
 msgid "The trigger control directives currently supported are:"
 msgstr "Les directives de déclenchements actuellement reconnues sont\\ :"
 
-# type: TP
+# type: Plain text
 #: ../../man/deb-triggers.5:22
 msgid "B<interest> I<trigger-name>"
 msgstr "B<interest>I<nom-de-fichier-à-déclenchement>"
@@ -3924,7 +3924,7 @@ msgstr "B<--triggers>"
 msgid "Cancels a previous B<--no-triggers>."
 msgstr "Annule un précédent B<--no-triggers>."
 
-# type: TP
+# type: Plain text
 #: ../../man/dpkg.1:552 ../../man/dpkg.cfg.5:14
 #, no-wrap
 msgid "I</etc/dpkg/dpkg.cfg>"
@@ -4237,7 +4237,7 @@ msgstr ""
 "Consultez I</usr/share/doc/dpkg/THANKS> pour la liste de ceux qui ont "
 "contribué à B<dpkg>."
 
-# type: TP
+# type: TH
 #: ../../man/dpkg-architecture.1:1
 #, no-wrap
 msgid "dpkg-architecture"
@@ -4478,7 +4478,7 @@ msgstr ""
 msgid "TERMS"
 msgstr "TERMINOLOGIE"
 
-# type: IX
+# type: IP
 #: ../../man/dpkg-architecture.1:84
 #, no-wrap
 msgid "build machine"
@@ -4489,7 +4489,7 @@ msgstr "Machine de construction"
 msgid "The machine the package is built on."
 msgstr "Machine sur laquelle le paquet est construit."
 
-# type: IX
+# type: IP
 #: ../../man/dpkg-architecture.1:86
 #, no-wrap
 msgid "host machine"
@@ -4500,7 +4500,7 @@ msgstr "Machine hôte"
 msgid "The machine the package is built for."
 msgstr "Machine pour laquelle le paquet est construit."
 
-# type: TH
+# type: IP
 #: ../../man/dpkg-architecture.1:88
 #, no-wrap
 msgid "Debian architecture"
@@ -4515,7 +4515,7 @@ msgstr ""
 "Chaîne de caractères de l'architecture Debian, qui spécifie l'emplacement "
 "dans l'archive \\s-1FTP\\s0. Par exemple : i386, sparc, hurd-i386."
 
-# type: IX
+# type: IP
 #: ../../man/dpkg-architecture.1:91
 #, no-wrap
 msgid "architecture wildcard"
@@ -4693,7 +4693,7 @@ msgstr "\\s-1DEB_HOST_GNU_SYSTEM\\s0"
 msgid "The System part of \\s-1DEB_HOST_GNU_TYPE\\s0."
 msgstr "Partie « système » de \\s-1DEB_HOST_GNU_TYPE\\s0."
 
-# type: IX
+# type: SH
 #: ../../man/dpkg-architecture.1:127
 #, no-wrap
 msgid "DEBIAN/RULES"
@@ -4813,7 +4813,7 @@ msgstr ""
 "n'est pas fiable puisque certaines architectures Debian ne correspondent à "
 "aucun nom de processeur."
 
-# type: IX
+# type: SH
 #: ../../man/dpkg-architecture.1:181
 #, no-wrap
 msgid "BACKWARD COMPATIBILITY"
@@ -5001,12 +5001,12 @@ msgstr ""
 "Vérifie si une architecture est identique à l'architecture actuelle ou à "
 "celle spécifiée :"
 
-# type: TP
+# type: Plain text
 #: ../../man/dpkg-architecture.1:258
 msgid "dpkg-architecture -elinux-alpha"
 msgstr "dpkg-architecture -elinux-alpha"
 
-# type: TP
+# type: Plain text
 #: ../../man/dpkg-architecture.1:260
 msgid "dpkg-architecture -amips -elinux-mips"
 msgstr "dpkg-architecture -amips -elinux-mips"
@@ -5020,12 +5020,12 @@ msgstr ""
 "Vérifie si l'architecture actuelle ou celle spécifiée avec -a correspond à "
 "un système Linux :"
 
-# type: TP
+# type: Plain text
 #: ../../man/dpkg-architecture.1:265
 msgid "dpkg-architecture -ilinux-any"
 msgstr "dpkg-architecture -ilinux-any"
 
-# type: TP
+# type: Plain text
 #: ../../man/dpkg-architecture.1:267
 msgid "dpkg-architecture -ai386 -ilinux-any"
 msgstr "dpkg-architecture -ai386 -ilinux-any"
@@ -5167,7 +5167,6 @@ msgstr ""
 msgid "B<-b>"
 msgstr "B<-b>"
 
-# NOTE: and en trop ?
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:19
 msgid ""
@@ -5848,7 +5847,7 @@ msgstr ""
 "B<dpkg-source>(1), B<dpkg-architecture>(1), B<dpkg-genchanges>(1), B<gpg>"
 "(1), B<pgp>(1)."
 
-# type: Plain text
+# type: TH
 #: ../../man/dpkg-checkbuilddeps.1:1
 #, no-wrap
 msgid "dpkg-checkbuilddeps"
@@ -5928,7 +5927,7 @@ msgstr "B<-h>"
 msgid "Copyright (C) 2001 Joey Hess"
 msgstr "Copyright (C) 2001 Joey Hess"
 
-# type: TP
+# type: TH
 #: ../../man/dpkg-distaddfile.1:1
 #, no-wrap
 msgid "dpkg-distaddfile"
@@ -6048,7 +6047,7 @@ msgstr ""
 "Il est possible d'exécuter B<dpkg-deb> en appelant B<dpkg> avec les options "
 "de B<dpkg-deb>. B<dpkg> comprend que B<dpkg-deb> est appelé et le lance."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:29
 #, no-wrap
 msgid "B<-b>, B<--build> I<directory> [I<archive>|I<directory>]"
@@ -6117,7 +6116,7 @@ msgstr ""
 "(puisque B<dpkg-deb> a besoin de lire et d'analyser le fichier de contrôle "
 "du paquet pour connaître le nom de fichier à utiliser)."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:78
 #, no-wrap
 msgid "B<-I>, B<--info> I<archive> [I<control-file-name>...]"
@@ -6150,7 +6149,7 @@ msgstr ""
 "présent, il affiche un message d'erreur sur «\\ stderr\\ » et quitte avec un "
 "code égal à 2."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:94
 #, no-wrap
 msgid "B<-W>, B<--show> I<archive>"
@@ -6168,7 +6167,7 @@ msgstr ""
 "affiche le nom et la version du paquet sur une seule ligne, séparés par une "
 "tabulation."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:101
 #, no-wrap
 msgid "B<-f>, B<--field> I<archive> [I<control-field-name>...]"
@@ -6208,7 +6207,7 @@ msgstr ""
 msgid "No errors are reported for fields requested but not found."
 msgstr "L'absence des champs demandés ne provoque pas de message d'erreur."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:119
 #, no-wrap
 msgid "B<-c>, B<--contents> I<archive>"
@@ -6225,7 +6224,7 @@ msgstr ""
 "en fait le résultat produit par la commande B<tar> et une option "
 "d'énumération verbeuse."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:125
 #, no-wrap
 msgid "B<-x>, B<--extract> I<archive directory>"
@@ -6256,7 +6255,7 @@ msgid "I<directory> (but not its parents) will be created if necessary."
 msgstr ""
 "I<répertoire> est créé si nécessaire (mais pas ses répertoires parents)."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:138
 #, no-wrap
 msgid "B<-X>, B<--vextract> I<archive directory>"
@@ -6271,7 +6270,7 @@ msgstr ""
 "Comme B<--extract> (B<-x>), mais affiche la liste des fichiers au fur et à "
 "mesure qu'ils sont extraits."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:143
 #, no-wrap
 msgid "B<--fsys-tarfile> I<archive>"
@@ -6289,7 +6288,7 @@ msgstr ""
 "cette option avec la commande B<tar>(1), on peut ainsi extraire un fichier "
 "précis d'une archive de paquet."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-deb.1:151
 #, no-wrap
 msgid "B<-e>, B<--control> I<archive> [I<directory>]"
@@ -7047,7 +7046,7 @@ msgstr ""
 "genchanges> lit dans ce fichier les données nécessaires à la création du "
 "fichier B<.changes>."
 
-# type: Plain text
+# type: TH
 #: ../../man/dpkg-gencontrol.1:1
 #, no-wrap
 msgid "dpkg-gencontrol"
@@ -7094,15 +7093,16 @@ msgid ""
 "must be discarded due to another dependency appearing further in the field, "
 "the superseding dependency will take the place of the discarded one."
 msgstr ""
-"I<Pre-Depends>, I<Depends>, I<Recommends> et I<Suggests> sont simplifiés dans "
-"cet ordre supprimer les dépendances qui sont connues pour être vérifié par "
-"la plus forte dépendance déjà traitée. Sont aussi supprimées toutes les auto-"
-"dépendances (dans les faits, cela supprime les dépendances qui sont déjà "
-"validées par la version du paquet déjà installé). Logiquement, il conserve "
-"les correspondances entre plusieurs dépendances dans le même paquet. L'ordre "
-"des dépendances est conservé du mieux possible\\ : si une dépendance doit "
-"être supprimée à cause d'une autre dépendance qui se trouve dans un champs "
-"suivant, la dépendance remplaçante prendra la place de celle éliminée."
+"I<Pre-Depends>, I<Depends>, I<Recommends> et I<Suggests> sont simplifiés "
+"dans cet ordre supprimer les dépendances qui sont connues pour être vérifié "
+"par la plus forte dépendance déjà traitée. Sont aussi supprimées toutes les "
+"auto-dépendances (dans les faits, cela supprime les dépendances qui sont "
+"déjà validées par la version du paquet déjà installé). Logiquement, il "
+"conserve les correspondances entre plusieurs dépendances dans le même "
+"paquet. L'ordre des dépendances est conservé du mieux possible\\ : si une "
+"dépendance doit être supprimée à cause d'une autre dépendance qui se trouve "
+"dans un champs suivant, la dépendance remplaçante prendra la place de celle "
+"éliminée."
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:32
@@ -7258,7 +7258,6 @@ msgstr ""
 "renseignements qui ne dépendent pas d'une version concernant le paquet "
 "source et les paquets binaires qui peuvent être créés."
 
-# NOTE: se termine par un ;
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:139
 msgid ""
@@ -7507,7 +7506,7 @@ msgstr ""
 msgid "Copyright 1995,1996 Erick Branderhorst"
 msgstr "Copyright 1995,1996 Erick Branderhorst"
 
-# type: Plain text
+# type: TH
 #: ../../man/dpkg-parsechangelog.1:1
 #, no-wrap
 msgid "dpkg-parsechangelog"
@@ -7730,7 +7729,7 @@ msgstr "B<--to>, B<-t> I<version>"
 msgid "include all changes up to or equal than I<version>."
 msgstr "inclut tous les changements apportés jusqu'à la I<version> comprise."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-parsechangelog.1:96
 #, no-wrap
 msgid "B<--count>, B<-c>, B<-n> I<number>"
@@ -7808,7 +7807,7 @@ msgstr ""
 msgid "Copyright (C) 2007, 2008 Frank Lichtenheld"
 msgstr "Copyright (C) 2007, 2008 Frank Lichtenheld"
 
-# type: Plain text
+# type: TH
 #: ../../man/dpkg-query.1:1
 #, no-wrap
 msgid "dpkg-query"
@@ -8441,7 +8440,7 @@ msgstr "B<deb-override>(5), B<dpkg-scanpackages>(1)."
 msgid "Roderick Schertler E<lt>roderick@argon.orgE<gt>"
 msgstr "Roderick Schertler E<lt>roderick@argon.orgE<gt>"
 
-# type: Plain text
+# type: TH
 #: ../../man/dpkg-shlibdeps.1:1
 #, no-wrap
 msgid "dpkg-shlibdeps"
@@ -8648,7 +8647,7 @@ msgstr ""
 "premier fichier d'informations trouvé qui concerne la bibliothèque est "
 "utilisé\\ :"
 
-# type: TP
+# type: IP
 #: ../../man/dpkg-shlibdeps.1:88
 #, no-wrap
 msgid "debian/shlibs.local"
@@ -8661,7 +8660,7 @@ msgstr ""
 "Fichier particulier à un paquet remplaçant les informations qui concernent "
 "les dépendances envers des bibliothèques partagées."
 
-# type: TP
+# type: IP
 #: ../../man/dpkg-shlibdeps.1:90
 #, no-wrap
 msgid "/etc/dpkg/shlibs.override"
@@ -8700,7 +8699,7 @@ msgstr ""
 msgid "I<admindir>/info/I<package>.shlibs"
 msgstr "I<admindir>/info/I<paquet>.shlibs"
 
-# type: TP
+# type: IP
 #: ../../man/dpkg-shlibdeps.1:101
 #, no-wrap
 msgid "/etc/dpkg/shlibs.default"
@@ -9213,7 +9212,6 @@ msgstr "dpkg-source"
 msgid "2008-03-16"
 msgstr "16-03-2008"
 
-# NOTE: , en trop
 # type: Plain text
 #: ../../man/dpkg-source.1:5
 msgid "dpkg-source - Debian source package (.dsc) manipulation tool"
@@ -9240,7 +9238,7 @@ msgstr ""
 "seule et elles ne permettent pas d'indiquer la valeur d'une option dans un "
 "argument séparé."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-source.1:20
 #, no-wrap
 msgid "B<-x >I<filename>B<.dsc >[I<output-directory>]"
@@ -9305,7 +9303,7 @@ msgstr ""
 "B<debian/source/format> de sorte que la construction du paquet source "
 "utilise le même format par défaut."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-source.1:50
 #, no-wrap
 msgid "B<-b> I<directory> [I<format-specific-parameters>]"
@@ -9588,13 +9586,13 @@ msgid "Do not check signatures and checksums before unpacking."
 msgstr ""
 "Ne vérifie pas les signatures et les sommes de contrôle avant de dépaqueter."
 
-# type: SS
+# type: SH
 #: ../../man/dpkg-source.1:185
 #, no-wrap
 msgid "SOURCE PACKAGE FORMATS"
 msgstr "FORMATS DE PAQUET SOURCE"
 
-# type: TP
+# type: SS
 #: ../../man/dpkg-source.1:186
 #, no-wrap
 msgid "Format: 1.0"
@@ -9611,7 +9609,7 @@ msgstr ""
 "à un B<.diff.gz> ou un simple B<.tar.gz> (dans ce cas, le paquet est appelé "
 "natif I<\"native\">)."
 
-# type: TP
+# type: Plain text
 #: ../../man/dpkg-source.1:192 ../../man/dpkg-source.1:349
 #: ../../man/dpkg-source.1:460
 msgid "B<Extracting>"
@@ -9881,7 +9879,7 @@ msgstr ""
 "Toutes les options B<-s>I<X> s'excluent mutuellement. Si vous en indiquez "
 "plusieurs, seule la dernière sera prise en compte."
 
-# type: TP
+# type: SS
 #: ../../man/dpkg-source.1:321
 #, no-wrap
 msgid "Format: 2.0"
@@ -10361,7 +10359,7 @@ msgstr ""
 "produisent des messages sur la sortie standard\\ ; ils peuvent être "
 "tranquillement ignorés."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-split.1:33
 #, no-wrap
 msgid "B<-s>, B<--split> I<complete-archive> [I<prefix>]"
@@ -10392,7 +10390,7 @@ msgstr ""
 "Quand on ne donne pas de I<préfixe>, le nom du fichier I<archive-complète> "
 "est utilisé, en incluant le répertoire et en supprimant tout B<.deb> restant."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-split.1:52
 #, no-wrap
 msgid "B<-j>, B<--join> I<part>..."
@@ -10443,7 +10441,7 @@ msgid "By default the output file is called I<package>B<->I<version>B<.deb>."
 msgstr ""
 "Par défaut, le fichier produit s'appelle\\ : I<paquet>B<->I<version>B<.deb>."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-split.1:71
 #, no-wrap
 msgid "B<-I>, B<--info> I<part>..."
@@ -10460,7 +10458,7 @@ msgstr ""
 "par tous. Les arguments ne représentant pas la partie d'un fichier binaire "
 "le disent aussi sur la sortie standard."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-split.1:76
 #, no-wrap
 msgid "B<-a>, B<--auto -o> I<complete-output part>"
@@ -10546,7 +10544,7 @@ msgstr ""
 "le nom du fichier, les parties présentes dans la file et le nombre total "
 "d'octets conservés."
 
-# type: Plain text
+# type: TP
 #: ../../man/dpkg-split.1:118
 #, no-wrap
 msgid "B<-d>, B<--discard> [I<package>...]"
@@ -10785,7 +10783,7 @@ msgstr ""
 msgid "B<deb>(5), B<deb-control>(5), B<dpkg-deb>(1), B<dpkg>(1)."
 msgstr "B<deb>(5), B<deb-control>(5), B<dpkg-deb>(1), B<dpkg>(1)."
 
-# type: TP
+# type: TH
 #: ../../man/dpkg-statoverride.8:1
 #, no-wrap
 msgid "dpkg-statoverride"
@@ -11495,7 +11493,7 @@ msgstr ""
 msgid "The use of the I<apt> access method is strongly recommended."
 msgstr "L'utilisation de la méthode d'accès I<apt> est fortement conseillée."
 
-# type: TP
+# type: SS
 #: ../../man/dselect.1:148
 #, no-wrap
 msgid "update"
@@ -11586,7 +11584,7 @@ msgstr ""
 "L'utilisation de l'écran interactif des sélections de paquets est expliquée "
 "de façon plus détaillée ci-dessous."
 
-# type: TP
+# type: SS
 #: ../../man/dselect.1:180
 #, no-wrap
 msgid "install"
@@ -11612,7 +11610,6 @@ msgstr ""
 "ou récupérés à la demande. Certaines méthodes d'accès retirent également les "
 "paquets qui ont été marqués pour être retirés."
 
-# NOTE: bug n'existe plus
 # type: Plain text
 #: ../../man/dselect.1:196
 msgid ""
@@ -11661,7 +11658,7 @@ msgid "Configures any previously installed, but not fully configured packages."
 msgstr ""
 "Configure les paquets déjà installés mais n'étant pas complètement installés."
 
-# type: TP
+# type: SS
 #: ../../man/dselect.1:207
 #, no-wrap
 msgid "remove"
@@ -11827,7 +11824,6 @@ msgstr ""
 "installés sur le système et les paquets connus par la base de données des "
 "paquets disponibles."
 
-# NOTE: on an off
 # type: Plain text
 #: ../../man/dselect.1:280
 msgid ""
@@ -11859,7 +11855,6 @@ msgstr ""
 "courant du paquet, les deux suivants concernent les sélections définies par "
 "l'utilisateur."
 
-# NOTE: missing ; after no error
 # type: Plain text
 #: ../../man/dselect.1:304
 #, no-wrap
@@ -12072,7 +12067,7 @@ msgstr ""
 "utiliser. En pratique, seules les opérations « à garder » et « ne plus "
 "garder » sont utiles pour les groupes."
 
-# type: Plain text
+# type: SS
 #: ../../man/dselect.1:378
 #, no-wrap
 msgid "Resolving depends and conflicts"
@@ -12288,7 +12283,7 @@ msgstr ""
 "mais sans les tirets. Les commentaires sont autorisés en faisant commencer "
 "la ligne par un caractère B<#>."
 
-# type: TP
+# type: Plain text
 #: ../../man/dselect.cfg.5:14
 msgid "I</etc/dpkg/dselect.cfg>"
 msgstr "I</etc/dpkg/dselect.cfg>"
@@ -12390,7 +12385,6 @@ msgstr ""
 "suppression d'entrée) dans le même répertoire que le fichier B<dir> (voyez "
 "l'option B<--infodir>)."
 
-# NOTE: space
 # type: Plain text
 #: ../../man/install-info.8:64
 msgid ""
@@ -12854,7 +12848,7 @@ msgstr "B<emacs>(1), B<info>(1), B<gzip>(1)."
 msgid "Copyright 1994 Ian Jackson"
 msgstr "Copyright 1994 Ian Jackson"
 
-# type: Plain text
+# type: TH
 #: ../../man/start-stop-daemon.8:1
 #, no-wrap
 msgid "start-stop-daemon"
@@ -12908,7 +12902,7 @@ msgstr ""
 "enfant-à-longue-vie et qui doivent survivre à un B<--stop>, vous devez "
 "spécifier un fichier pid («\\ pidfile\\ »)."
 
-# type: Plain text
+# type: TP
 #: ../../man/start-stop-daemon.8:36
 #, no-wrap
 msgid "B<-S>, B<--start> [B<-->] I<arguments>"
@@ -12932,7 +12926,7 @@ msgstr ""
 "précisée. Tout argument donné après B<--> sur la ligne de commande est passé "
 "tel quel au programme qui doit être lancé."
 
-# type: IP
+# type: TP
 #: ../../man/start-stop-daemon.8:53
 #, no-wrap
 msgid "B<-K>, B<--stop>"
@@ -13408,7 +13402,7 @@ msgstr ""
 "Page de manuel par Klee Dienes E<lt>klee@mit.eduE<gt>, partiellement "
 "reformattée par Ian Jackson."
 
-# type: Plain text
+# type: TH
 #: ../../man/update-alternatives.8:8
 #, no-wrap
 msgid "update-alternatives"
