dpkg: Do not mark debug message for translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-05  Guillem Jover  <guillem@debian.org>
+
+	* src/archives.c (filesavespackage): Do not mark debug message for
+	translation.
+
 2008-07-04  Raphael Hertzog  <hertzog@debian.org>
             Bruce Sass <bmsass@shaw.ca>
 
