Spelling error spotted by KiBi

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -2172,7 +2172,7 @@ msgstr ""
 "SONAME tel que exporté par B<objdump>(1). La varible I<modèle de dépendance> "
 "est une dépendance où I<#MINVER#> est dynamiquement remplacé soit par une "
 "version comme \"(E<gt>= I<version minimum>)\" soit par rien (si une "
-"dépendance quelque soit sa version est reconnue suffisante)."
+"dépendance quelle que soit sa version est reconnue suffisante)."
 
 # type: Plain text
 #: ../../man/deb-symbols.5:36
@@ -6623,7 +6623,7 @@ msgid ""
 "version."
 msgstr ""
 "Indique que toutes les versions de ce fichier sont détournées. Cela signifie "
-"qu'il n'y a pas d'exception et quelque soit le paquet installé, ce fichier "
+"qu'il n'y a pas d'exception et quel que soit le paquet installé, ce fichier "
 "sera détourné. Un administrateur peut par exemple installer une version "
 "modifiée localement."
 
