Use $(filter ...) instead of $(findstring ...)
To properly extract space separated options from DEB_BUILD_OPTIONS.

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Properly lstat the correct file when using --root on package upgrade.
     Thanks to Egmont Koblinger. Closes: #281057
   * Print a longer string when a disallowed field value is found when parsing.
+  * Use $(filter ...) instead of $(findstring ...) to extract space separated
+    options from DEB_BUILD_OPTIONS in debian/rules.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
