dpkg: Move trig_file_activate call from namenodetouse to its callers

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-07-06  Guillem Jover  <guillem@debian.org>
+
+	* src/main.h: Remove comment about side effect in namenodetouse.
+	* src/help.c (namenodetouse): Move call to trig_file_activate to ...
+	* src/archives.c (tarobject): ... here.
+	* src/processarc.c (process_archive): Likewise.
+	* src/remove.c (removal_bulk_remove_files): Likewise.
+	(removal_bulk_remove_leftover_dirs): Likewise.
+
 2008-07-06  Michel Lespinasse  <walken@zoy.org>
 
 	* dselect/baselist.cc (baselist::startdisplay): Create the
