Updated Russian translation for scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ dpkg (1.14.21) UNRELEASED; urgency=low
     triggers-awaited while trying to sort out a proper order for configuring
     packages. Closes: #143307
 
+  [ Updated scripts translations ]
+  * Russian (Yuri Kozlov) . Closes: #490076
+
   [ Updated dpkg translations ]
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
   * Romanian (Eddy Petrișor).
