--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-10  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 473t.
+
 2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* pl.po: Updated to 473t.
