--- a/scripts/po/ru.po
+++ b/scripts/po/ru.po
@@ -1,13 +1,13 @@
-# translation of ru.po to Russian
+# translation of dpkg_1.14.20_ru.po to Russian
 # Localization file for dpkg and other programs from dpkg package.
 #
 # Yuri Kozlov <kozlov.y@gmail.com>, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.19\n"
+"Project-Id-Version: dpkg 1.14.20\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-06-09 09:08+0200\n"
-"PO-Revision-Date: 2008-05-03 22:40+0400\n"
+"PO-Revision-Date: 2008-07-09 20:55+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2456,10 +2456,9 @@ msgid "line after --- isn't as expected in diff `%s' (line %d)"
 msgstr "строка после --- не та, что ожидалась в diff `%s' (строка %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:337
-#, fuzzy, perl-format
+#, perl-format
 msgid "none of the filenames in ---/+++ are relative in diff `%s' (line %d)"
-msgstr ""
-"оригинальный и изменённый файлы равны /dev/null для diff `%s' (строка %d)"
+msgstr "ни один из имён файлов в ---/+++ не связаны с diff `%s' (строка %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:343
 #, perl-format
@@ -2468,14 +2467,14 @@ msgstr ""
 "оригинальный и изменённый файлы равны /dev/null для diff `%s' (строка %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:350
-#, fuzzy, perl-format
+#, perl-format
 msgid "file removal without proper filename in diff `%s' (line %d)"
-msgstr "строка после --- не та, что ожидалась в diff `%s' (строка %d)"
+msgstr "удаление файла без правильного имени файла в diff `%s' (строка %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:352
 #, perl-format
 msgid "diff %s removes a non-existing file %s (line %d)"
-msgstr ""
+msgstr "diff %s удаляет несуществующий файл %s (строка %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:361
 #, perl-format
@@ -2888,9 +2887,9 @@ msgstr ""
 "изменённыйдвоичный файл в debian tarball"
 
 #: scripts/Dpkg/Source/Package/V2.pm:320
-#, fuzzy, perl-format
+#, perl-format
 msgid "unwanted binary file: %s"
-msgstr "повторение бинарного поля в %s"
+msgstr "нежелательный двоичный файл: %s"
 
 #: scripts/Dpkg/Source/Package/V2.pm:326
 #, perl-format
@@ -2898,6 +2897,8 @@ msgid ""
 "detected %d unwanted binary file(s) (add them in debian/source/include-"
 "binaries to allow their inclusion)."
 msgstr ""
+"обнаружено %d нежелательных двочных файлов (что разрешить включение, "
+"добавьте их в debian/source/include-binaries)."
 
 #: scripts/Dpkg/Source/Package/V2.pm:339
 msgid "unrepresentable changes to source"
@@ -2911,7 +2912,7 @@ msgstr "не удалось удалить %s"
 #: scripts/Dpkg/Source/Package/V2.pm:352
 #, perl-format
 msgid "local changes stored in %s, the modified files are:"
-msgstr ""
+msgstr "локальные изменения сохранены в %s, изменённые файлы:"
 
 #: scripts/Dpkg/Source/Package/V2.pm:358
 #, perl-format
@@ -3125,9 +3126,3 @@ msgstr "пакет исходников содержит два конфликт
 #, perl-format
 msgid "version number contains illegal character `%s'"
 msgstr "номер версии содержит недопустимый символ `%s'"
-
-#~ msgid "diff `%s' patches file with no subdirectory"
-#~ msgstr "файл заплаток diff `%s' без подкаталога"
-
-#~ msgid "diff `%s' is missing trailing newline"
-#~ msgstr "в diff `%s' отсутствует завершающий символ новой строки"
